QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

CVS HEAD

- Conditional build for JACK port aliases support (JACK >= 0.109.2).

- Alternate icon sizes other than default 16x16, are now effective to
  the Connections widget (Setup/Dislay/Connections Window/Icon size).


0.3.4  2008-12-05  Patchbay snapshot revamp.

- Introducing the very first and complete translations in-package:
  German (de), Spanish (es), French (fr) and Russian (ru); credits
  in TRANSLATORS.

- At last, after years of retarded procrastination, the old infamous
  patchbay snapshot feature has been the subject of a almost complete
  rewrite and it does try to give a way better mapping of all actual
  and current running client/port connections, both JACK (audio, MIDI)
  and ALSA MIDI, of course ;)

- On Setup/Settings/Parameters dialog, all device selection options
  are now reset to default when disabled interactively.

- Grayed/disabled palette color group fix for dark color themes.

- Qt Software logo update.

- Fait-divers: desktop menu file touched to openSUSE conventions.

- ALSA PCM devices now only listed/enumerated iif strictly compliant
  with the audio mode criteria (Duplex, Capture-only or Playback-only)
  as kindly suggested by Nedko Ardaunov.

- JACK client/port aliases may now be displayed as a global user option
  (see Setup/Display/Connections/JACK client/port aliases).

- Lighten up the connections line and highlight colors, as seen to fit
  best on some darker background themes.

- Patchbay snapshot fixed to differentiate socket clients according
  to its type (Audio, MIDI or ALSA-Seq), avoiding the mess and gross
  mistake of hanging disparate type ports under the same client item.

- JACK_DEFAULT_SERVER environment variable is now appended to the X11
  unique application identifier, allowing for having multiple instances
  each controlling its own JACK server, besides the default one.
